--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
 
     <color name="tim">#111942</color>
     <color name="yellow">#FFEB3B</color>
+    <color name="blue">#2196F3</color>
     <color name="xam">#919295</color>
 </resources>
