--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,7 +39,7 @@
                 android:layout_weight="1"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:text="TV SHOW || MOST POPULAR"
+                android:text="TV SHOW"
                 android:textColor="@color/white"
                 android:textSize="@dimen/_14ssp" />
 
