--- a/app/src/main/res/layout/activity_tvshow_details.xml
+++ b/app/src/main/res/layout/activity_tvshow_details.xml
@@ -82,7 +82,7 @@
                     android:id="@+id/layoutSliderIndicators"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
+                    android:gravity="end"
                     android:orientation="horizontal"
                     android:padding="@dimen/_8sdp"
                     android:visibility="gone"
